--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"@babel/core": "^7.3.3",
 		"@babel/preset-env": "^7.3.1",
 		"@babel/register": "^7.0.0",
+		"@fortawesome/fontawesome-free": "^5.7.2",
 		"gulp-watch": "^5.0.1"
 	}
 }
