--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
 	"babel": {
 		"presets": [
 			[
-				"@babel/preset-env",
-				{
-					"useBuiltIns": "usage"
-				}
+				"@babel/preset-env"
 			]
 		]
 	},
