--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
 		"@babel/core": "^7.4.3",
 		"@babel/preset-env": "^7.4.3",
 		"@babel/register": "^7.4.0",
-		"gulp-watch": "^5.0.1"
+		"bootstrap": "^4.3.1",
+		"gulp-watch": "^5.0.1",
+		"popper.js": "^1.15.0"
 	}
 }
