--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@babel/core": "^7.4.3",
 		"@babel/preset-env": "^7.4.3",
 		"@babel/register": "^7.4.0",
+		"gulp-sass": "^4.0.2",
 		"gulp-watch": "^5.0.1"
 	}
 }
