--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
 	"babel": {
 		"presets": [
 			[
-				"@babel/preset-env"
+				"@babel/preset-env",
+				{
+					"useBuiltIns": "usage",
+					"corejs": 3
+				}
 			]
 		]
 	},
@@ -66,6 +70,7 @@
 		"@babel/core": "^7.4.3",
 		"@babel/preset-env": "^7.4.3",
 		"@babel/register": "^7.4.0",
+		"core-js": "^3.0.1",
 		"gulp-watch": "^5.0.1"
 	}
 }
