--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 		"babel-cli": "^6.26.0",
 		"babel-loader": "^8.0.5",
 		"babel-preset-env": "^1.7.0",
-		"browser-sync": "^2.26.4",
+		"browser-sync": "^2.26.5",
 		"css-mqpacker": "^7.0.0",
 		"deep-extend-stream": "^4.0.0-0",
-		"del": "^4.1.0",
+		"del": "^4.1.1",
 		"fs": "^0.0.1-security",
 		"gulp": "^3.9.1",
 		"gulp-cached": "^1.1.1",
@@ -47,8 +47,8 @@
 		"imagemin-gifsicle": "^6.0.1",
 		"imagemin-jpeg-recompress": "^6.0.0",
 		"imagemin-pngquant": "^7.0.0",
-		"jquery": "^3.4.0",
-		"lazysizes": "^4.1.8",
+		"jquery": "^3.4.1",
+		"lazysizes": "^5.0.0-rc1",
 		"merge-stream": "^1.0.1",
 		"picturefill": "^3.0.3",
 		"reg-keygen-git-hash-plugin": "^0.7.6",
@@ -67,9 +67,9 @@
 		"webpack-stream": "^5.2.1"
 	},
 	"dependencies": {
-		"@babel/core": "^7.4.3",
-		"@babel/preset-env": "^7.4.3",
-		"@babel/register": "^7.4.0",
+		"@babel/core": "^7.4.4",
+		"@babel/preset-env": "^7.4.4",
+		"@babel/register": "^7.4.4",
 		"core-js": "^3.0.1",
 		"gulp-watch": "^5.0.1"
 	}
