--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"devDependencies": {
 		"autoprefixer": "^9.5.1",
 		"babel-cli": "^6.26.0",
-		"babel-loader": "^8.0.5",
+		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
 		"browser-sync": "^2.26.5",
 		"css-mqpacker": "^7.0.0",
@@ -25,10 +25,10 @@
 		"fs": "^0.0.1-security",
 		"gulp": "^3.9.1",
 		"gulp-cached": "^1.1.1",
-		"gulp-changed": "^3.2.0",
+		"gulp-changed": "^4.0.0",
 		"gulp-cheerio": "^0.6.3",
 		"gulp-consolidate": "^0.2.0",
-		"gulp-filter": "^5.1.0",
+		"gulp-filter": "^6.0.0",
 		"gulp-fontmin": "^0.7.4",
 		"gulp-iconfont": "^10.0.2",
 		"gulp-if": "^2.0.2",
@@ -42,14 +42,14 @@
 		"gulp-stylus": "^2.7.0",
 		"gulp-svgmin": "^2.2.0",
 		"gulp-svgstore": "^7.0.1",
-		"gulp.spritesmith": "^6.9.0",
+		"gulp.spritesmith": "^6.10.0",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"imagemin-gifsicle": "^6.0.1",
 		"imagemin-jpeg-recompress": "^6.0.0",
 		"imagemin-pngquant": "^7.0.0",
 		"jquery": "^3.4.1",
-		"lazysizes": "^5.0.0-rc1",
-		"merge-stream": "^1.0.1",
+		"lazysizes": "^5.1.0",
+		"merge-stream": "^2.0.0",
 		"picturefill": "^3.0.3",
 		"reg-keygen-git-hash-plugin": "^0.7.6",
 		"reg-publish-s3-plugin": "^0.7.22",
@@ -63,15 +63,16 @@
 		"vinyl-buffer": "^1.0.1",
 		"vinyl-source-stream": "^2.0.0",
 		"vinyl-yaml-data": "^2.0.1",
-		"webpack": "^4.30.0",
+		"webpack": "^4.32.2",
 		"webpack-stream": "^5.2.1"
 	},
 	"dependencies": {
-		"@babel/core": "^7.4.4",
-		"@babel/preset-env": "^7.4.4",
+		"@babel/core": "^7.4.5",
+		"@babel/preset-env": "^7.4.5",
 		"@babel/register": "^7.4.4",
-		"core-js": "^3.0.1",
+		"core-js": "^3.1.3",
 		"gulp-sass": "^4.0.2",
-		"gulp-watch": "^5.0.1"
+		"gulp-watch": "^5.0.1",
+		"terser-webpack-plugin": "^1.3.0"
 	}
 }
