--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
 		"core-js": "^3.1.3",
 		"gulp-sass": "^4.0.2",
 		"gulp-watch": "^5.0.1",
+		"pdf.js-controller": "^1.0.1",
+		"pdfjs-dist": "^2.0.943",
 		"terser-webpack-plugin": "^1.3.0"
 	}
 }
