--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"core-js": "3",
 		"gulp-sass": "^4.0.2",
 		"gulp-watch": "^5.0.1",
+		"moment": "^2.24.0",
 		"terser-webpack-plugin": "^1.3.0"
 	}
 }
