--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 			[
 				"@babel/preset-env",
 				{
-					"useBuiltIns": "usage"
+					"useBuiltIns": "usage",
+					"corejs": 3
 				}
 			]
 		]
@@ -13,25 +14,24 @@
 		"last 2 versions"
 	],
 	"devDependencies": {
-		"autoprefixer": "^9.5.0",
+		"autoprefixer": "^9.6.0",
 		"babel-cli": "^6.26.0",
-		"babel-loader": "^8.0.5",
-		"babel-preset-env": "^1.7.0",
-		"browser-sync": "^2.26.3",
+		"babel-loader": "^8.0.6",
+		"browser-sync": "^2.26.7",
 		"css-mqpacker": "^7.0.0",
 		"deep-extend-stream": "^4.0.0-0",
-		"del": "^4.0.0",
+		"del": "^4.1.1",
 		"fs": "^0.0.1-security",
 		"gulp": "^3.9.1",
 		"gulp-cached": "^1.1.1",
-		"gulp-changed": "^3.2.0",
+		"gulp-changed": "^4.0.0",
 		"gulp-cheerio": "^0.6.3",
 		"gulp-consolidate": "^0.2.0",
-		"gulp-filter": "^5.1.0",
+		"gulp-filter": "^6.0.0",
 		"gulp-fontmin": "^0.7.4",
-		"gulp-iconfont": "^10.0.2",
+		"gulp-iconfont": "^10.0.3",
 		"gulp-if": "^2.0.2",
-		"gulp-imagemin": "^5.0.3",
+		"gulp-imagemin": "^6.0.0",
 		"gulp-plumber": "^1.2.1",
 		"gulp-postcss": "^8.0.0",
 		"gulp-pug": "^4.0.1",
@@ -39,19 +39,19 @@
 		"gulp-rename": "^1.4.0",
 		"gulp-sourcemaps": "^2.6.5",
 		"gulp-stylus": "^2.7.0",
-		"gulp-svgmin": "^2.1.0",
+		"gulp-svgmin": "^2.2.0",
 		"gulp-svgstore": "^7.0.1",
-		"gulp.spritesmith": "^6.9.0",
+		"gulp.spritesmith": "^6.10.1",
 		"hard-source-webpack-plugin": "^0.13.1",
 		"imagemin-gifsicle": "^6.0.1",
 		"imagemin-jpeg-recompress": "^6.0.0",
-		"imagemin-pngquant": "^7.0.0",
-		"jquery": "^3.3.1",
-		"lazysizes": "^4.1.6",
-		"merge-stream": "^1.0.1",
+		"imagemin-pngquant": "^8.0.0",
+		"jquery": "^3.4.1",
+		"lazysizes": "^5.1.0",
+		"merge-stream": "^2.0.0",
 		"picturefill": "^3.0.3",
 		"reg-keygen-git-hash-plugin": "^0.7.6",
-		"reg-publish-s3-plugin": "^0.7.10",
+		"reg-publish-s3-plugin": "^0.7.22",
 		"reg-suit": "^0.7.15",
 		"require-dir": "^1.2.0",
 		"ress": "^1.2.2",
@@ -62,14 +62,16 @@
 		"vinyl-buffer": "^1.0.1",
 		"vinyl-source-stream": "^2.0.0",
 		"vinyl-yaml-data": "^2.0.1",
-		"webpack": "^4.29.6",
+		"webpack": "^4.34.0",
 		"webpack-stream": "^5.2.1"
 	},
 	"dependencies": {
-		"@babel/core": "^7.3.4",
-		"@babel/preset-env": "^7.3.4",
-		"@babel/register": "^7.0.0",
-		"@fortawesome/fontawesome-free": "^5.7.2",
-		"gulp-watch": "^5.0.1"
+		"@babel/core": "^7.4.4",
+		"@babel/preset-env": "^7.4.4",
+		"@babel/register": "^7.4.4",
+		"core-js": "3",
+		"gulp-sass": "^4.0.2",
+		"gulp-watch": "^5.0.1",
+		"terser-webpack-plugin": "^1.3.0"
 	}
 }
